# configuracoes_notebooks

./: README.md  pyproject.toml
configuracoes_notebooks/: __init__.py
configuracoes_notebooks/set_proj_dir/: __init__.py  find_dir.py  find_git_proj_dir.py  set_dir_in_path.py  set_proj_dir.py
set_proj_dir/: find_dir.py  set_dir_in_path.py  set_proj_dir.py
