[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SetProjRootinPath"
version = "0.1.0"
authors = [
    { name = "Henrique Pougy", email = "hpougy@prefeitura.sp.gov.br" },
    { name = "Olivia Silva Amann", email = "oliviaamann@prefeitura.sp.gov.br"}
]
description = "Utilitario simples para colocar o diretorio do projeto no path do notebook. Ajuda a importar submodulos no notebook"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/sepep-pmsp/configuracoes_notebooks"
"Bug Tracker" = "https://github.com/sepep-pmsp/configuracoes_notebooks/issues"
